--- a/deploy/kubernetes/manifests/vs-nodeport-svc.yaml
+++ b/deploy/kubernetes/manifests/vs-nodeport-svc.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-ingress-controller
-  namespace: ingress-nginx
+  namespace: nginx-ingress
 spec:
   type: NodePort
   selector:
-    app: ingress-nginx
+    app: nginx-ingress
     component: controller
   ports:
     - name: http
