--- a/deploy/kubernetes/manifests/vs-nodeport-svc.yaml
+++ b/deploy/kubernetes/manifests/vs-nodeport-svc.yaml
@@ -10,6 +10,7 @@ spec:
     component: controller
   ports:
     - name: http
+      nodePort: 8088
       port: 8088
       targetPort: http
       protocol: TCP
